--- a/fontcss.html
+++ b/fontcss.html
@@ -646,7 +646,10 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <div style="font-family:abc;" class="usrtxt" contenteditable ></div>
         </fieldset>
         
-
+        <fieldset>
+            <legend tag='openai sans' >oai</legend>
+            <div style="font-family:oai;" class="usrtxt" contenteditable ></div>
+        </fieldset>
     </div>
 
 </article>
