--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@ margin: .25rem 0;
     mix-blend-mode: difference;
 }
 
+
+#projDesc a{font-size: large; display: block; width: 60%; text-decoration: none;}
+
 #proj>img{
     aspect-ratio: 1 /1;
     object-fit: cover;
@@ -512,6 +515,16 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
             <img   src="https://f.zly.vg/assets/b2p.jpg" style="width: 100%;">
             <div id="projDesc">
                 <a href="https://github.com/xolyn/beamer2ppt">beamer2ppt</a>
+            </div>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div id="proj">
+            <img   src="https://images.unsplash.com/photo-1669502067440-6a09729d072d?q=80&w=2000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+             style="width: 100%;">
+            <div id="projDesc">
+                <a href="/academic/bp.html">Birthday paradox</a>
             </div>
         </div>
       </div>
