--- a/fontcss.html
+++ b/fontcss.html
@@ -656,6 +656,12 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend tag='openai sans' >oai</legend>
             <div style="font-family:oai;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+                
+        <fieldset>
+            <legend tag='Google Sans Text' >Google Sans Text</legend>
+            <div style="font-family:'Google Sans Text';" class="usrtxt" contenteditable ></div>
+        </fieldset>
     </div>
 
 </article>
