--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     --ac: lightgray;
     /* --ff: Inter, sans-serif; */
     --ff: 'univ';
+    /* --ff: 'Google Sans Text'; */
     --fs: small;
     --hp: 4vw;
 }
@@ -610,9 +611,10 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 <div>
     <ul>
         <li>Detail matters.</li>
-        <li>Never too late to act.</li>
+        <!-- <li>Never too late to act.</li> -->
         <li>Simplicity is the ultimate sophistication.</li>
         <li>Life is present.</li>
+        <li>Embrace mediocrity.</li>
     </ul>
 </div>
 </article>
