--- a/fontcss.html
+++ b/fontcss.html
@@ -232,8 +232,11 @@ const csstxt='<link rel="preconnect" href="https://xolyn.github.io/"> <!-- exped
                 </p>
             </div>
     </details>
+
 <!-- <hr style="border: .5px solid black;"> -->
  <p></p>
+
+ 
     <details class="" style=" ">
         <summary style="" class="far narrow"><div style="display: inline-block; padding-bottom: .5rem; font-size: medium; font-weight: bold;">Adaptability for Webkit</div></summary>
             <div style="font-size: smaller; border-top: 1px solid rgb(242, 241, 241);">
@@ -258,8 +261,10 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 
 
 </div>
-    </details>
+</details>
 <!-- <hr style="border: .5px solid black;"> -->
+
+<p></p>
 
     <p></p>
     <h2 style="font-size: medium;">How to use?</h2>
@@ -285,6 +290,13 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
     Then edit and refer to the preview below to choose fonts you like to use them by corresponding alias(es).<br>
     You can click on names followed by an asterisk (＊) to see its bolder font weight.
 </p>
+
+<b>Add your own font family to preview:</b>
+
+<div id="dropzone" style="color:gray; cursor: pointer; height:20dvh;border:2px dashed gray;display:flex;align-items:center;justify-content:center;margin:5dvh 1dvw; border-radius: .5rem;">
+    Drop/Choose font file here
+</div>
+<div id="preview"></div>
 
 <div style="display: flex; flex-direction: column; align-items: center; font-family: BDLifelessGrotesk;; position: sticky; top:0; background-color: white; padding: .75em 0;">    
 
@@ -327,9 +339,10 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
     </div>
         
 
-
     </div>
 </div>
+
+
 
     
     <div id="fontset" style="max-width: 100vw;
