--- a/fontcss.html
+++ b/fontcss.html
@@ -293,9 +293,10 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 
 <b>Add your own font family to preview:</b>
 
-<div id="dropzone" style="color:gray; cursor: pointer; height:20dvh;border:2px dashed gray;display:flex;align-items:center;justify-content:center;margin:5dvh 1dvw; border-radius: .5rem;">
+<div id="dropzone" style="font-size: smaller; color:gray; cursor: pointer; height:20dvh;border:2px dashed gray;display:flex;align-items:center;justify-content:center;margin:5dvh 0; border-radius: .5rem;">
     Drop/Choose font file here
 </div>
+<input type="file" id="fileInput" accept=".otf,.ttf,.eot,.woff,.woff2" style="display:none">
 <div id="preview"></div>
 
 <div style="display: flex; flex-direction: column; align-items: center; font-family: BDLifelessGrotesk;; position: sticky; top:0; background-color: white; padding: .75em 0;">    
@@ -695,6 +696,7 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 
 <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 <script src="https://f.zly.vg/jq.js"></script>
+<script src="js/fontDrop.js"></script>
 <script>
 function showInstant() {
     var instantElement = document.getElementById('instant');
