--- a/fg.html
+++ b/fg.html
@@ -116,7 +116,7 @@
         .btma{
             color:gray;
             transition: .3s;
-            font-family: chirp_r;
+            font-family: chirp;
         }
 
         .btma:hover{
@@ -127,7 +127,7 @@
 </style>
 </head>
 <body>
-<p style="font-size: xx-large; font-family: sig; margin:0px 0px .5vh">fonts studio</p> <!-- Title for the gallery -->
+<p style="font-size: xx-large; font-family: martina; margin:0px 0px .5vh">fonts studio</p> <!-- Title for the gallery -->
 <a href="fontcss.html" style="margin:0px 0px 2.5vh; font-size: large;" class="btma">Try more fonts on your website! <span style="font-family: sf-round;">&rarr;</span></a>
 <div class="gallery">
 
