--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Liter&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,ght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <link rel="stylesheet" href="widgets/hamb.css">
 <title>Lingyu Zhou</title>
@@ -20,6 +24,7 @@
     --ac: lightgray;
     /* --ff: Inter, sans-serif; */
     --ff: 'univ';
+    /* --ff: 'Public Sans'; */
     /* --ff: 'Google Sans Text'; */
     --fs: small;
     --hp: 4vw;
@@ -98,7 +103,7 @@ a.noul{text-decoration: none;}
 
 article{ margin: 2.5vh var(--hp); }
 
-article h1{transition: .3s;}
+article h1{transition: .3s; font-size: large}
 
 /* article>h1{ text-decoration: underline; } */
 
@@ -432,7 +437,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 </div>
 
 <article id="about">
-    <h1 >about</h1>
+    <h1>about</h1>
     <div>
     <p>Hello stranger. My name is Lingyu Zhou, aka "Yuin".        <!-- (/ʈʂoʊˉ lɪŋˊ yˇ/) -->
         I am a student</a> at <a href="https://cornell.edu">Cornell University</a>,
