--- a/index.html
+++ b/index.html
@@ -440,9 +440,15 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <h1>about</h1>
     <div>
     <p>Hello stranger. My name is Lingyu Zhou, aka "Yuin".        <!-- (/ʈʂoʊˉ lɪŋˊ yˇ/) -->
-        I am a student</a> at <a href="https://cornell.edu">Cornell University</a>,
-        also the founder of <a href="https://khentmt.com">KH Entertainment</a>. I explore the numbers and their connections behind.
-        I also craft insightful data narratives from complex systems by blending applied mathematics and computer science technology.
+        I am a now graduated student</a> from <a href="https://cornell.edu">Cornell University</a>,
+        also the founder of <a href="https://khentmt.com">KH Entertainment</a>. 
+        </p>
+
+    <p>
+        I try to deliver the best UX from data analysis, also explore the numbers and their connections behind, using applied mathematics and computer engineering.
+    </p>    
+
+    <p> 
         Previously, I studied applied mathematics at 
         <a href="https://wisc.edu"> University of Wisconsin-Madison</a> for my bachelor's degree.
         I am now working as a data analyst who works mainly on labor compliance survey data in east Asia for Professor <a href="https://www.ilr.cornell.edu/people/sarosh-kuruvilla">Sarosh Kuruvilla</a> at <a href="https://www.ilr.cornell.edu/">Cornell IRL</a>.
@@ -452,7 +458,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <p>
         My specialties are software engineering, math, data analysis, and data visualization.
         
-        My research interests are computational social science and affective computing, particularly in using data science methods and natural language processing to model and analyze emotional and behavioral trends within large-scale social networks. My goal is to explore how computational models can provide insights into social phenomena, group dynamics, and collective emotions, utilizing vast social media data to understand real-world interactions and sentiments. This area lies at the intersection of statistical modeling, machine learning, and NLP, with applications in prediction of social behavior, sentiment analysis, and trend forecasting.
+        <!-- My research interests are computational social science and affective computing, particularly in using data science methods and natural language processing to model and analyze emotional and behavioral trends within large-scale social networks. My goal is to explore how computational models can provide insights into social phenomena, group dynamics, and collective emotions, utilizing vast social media data to understand real-world interactions and sentiments. This area lies at the intersection of statistical modeling, machine learning, and NLP, with applications in prediction of social behavior, sentiment analysis, and trend forecasting. -->
     </p>
 
     <p>
@@ -679,8 +685,9 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     <p style="width: fit-content;" id="footerLink">
         <a href="javascript: void(0)"  onclick="navigator.share({title:'Lingyu Zhou',text:`Lingyu Zhou's Homepage`,url:'https://xolyn.github.io'});">Share</a>
         <a href="mailto:report@zly.vg">Report</a>
-        <a href="javascript: void(0)"  onclick="myModal.style.display='flex'">Legal</a>
-        <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1">CA</a>
+        <!-- <a href="javascript: void(0)"  onclick="myModal.style.display='flex'">Legal</a> -->
+        <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1">Terms</a>
+        <a href="javascript: void(0)" onclick="this.innerHTML=this.innerHTML==='CA'?'v.1.100003RAD00MIN012':'CA'">CA</a>
     </p>
 </div>
 
