--- a/widgets/index.html
+++ b/widgets/index.html
@@ -6,6 +6,12 @@
 <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
 <link rel="shortcut icon" href="https://img.icons8.com/ios-glyphs/30/1A1A1A/widgy.png" type="icon">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Liter&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+
 <!-- https://icons.getbootstrap.com/ -->
 <link rel="stylesheet" href="widgets.css">
 <title>gadgetz</title>
@@ -14,7 +20,8 @@
 
 /* h1:hover::after, */
 :root{
-font-family: "zilla", serif;
+/* font-family: "zilla", serif; */
+font-family: "ahrefs";
 /* font-family: Inter, sans-serif; */
 /* font-feature-settings: 'liga' 1, 'calt' 1, 'ccmp' 1;  */
 -webkit-font-smoothing: antialiased;
@@ -60,7 +67,7 @@ pre{
 </head>
 <body style=" margin: 5vh 3.5vw;">
     <h1>
-        gadgetz
+        Gadgetz
     </h1>
 
     <p>Some predefined widgets for web.</p>
