--- a/fontcss.html
+++ b/fontcss.html
@@ -671,6 +671,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <div style="font-family:oai;" class="usrtxt" contenteditable ></div>
         </fieldset>
 
+        <fieldset>
+            <legend tag='openai sans' >3x3</legend>
+            <div style="font-family:'3x3';" class="usrtxt" contenteditable ></div>
+        </fieldset>
+
                 
         <fieldset>
             <legend tag='Google Sans Text' >Google Sans Text</legend>
