--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     --bc: white;
     --ac: lightgray;
     /* --ff: Inter, sans-serif; */
-    /* --ff: 'univ'; */
+    --ff: 'univ';
     /* --ff: 'Public Sans'; */
-    --ff: 'sneak';
     /* --ff: 'Google Sans Text'; */
     --fs: small;
     --hp: 4vw;
@@ -58,8 +57,8 @@
 }
 
 *,html,body{
-    /* font-feature-settings: "ss15"; */
-    font-feature-settings: "calt", "dlig", "liga", "ss03";
+    font-feature-settings: "ss15";
+    /* font-feature-settings: "calt", "dlig", "liga", "ss03"; */
     font-family: var(--ff);
     font-size: var(--fs);
     line-height: 120%;
