--- a/neo.html
+++ b/neo.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<link rel='stylesheet' href='https://xolyn.github.io/font.css'>
+<link rel='stylesheet' href='font.css'>
 <title>Document</title>
 <style>
 html{
-    font-family: 'sneak';
-    font-feature-settings: "calt", "dlig", "liga", "ss03";
-    /* font-size: smaller; */
+    font-family: '3x3';
+    /* font-family: 'sneak';
+    font-feature-settings: "calt", "dlig", "liga", "ss03"; */
+    font-size: smaller;
     background-color: black;
     color:white;
 }
@@ -28,7 +29,7 @@ h2{border-top: .5px solid #ddd; padding: .5rem 0;}
 }
 
 .column {
-  padding: 1rem;
+  padding: 0.5rem 1rem;
 }
 
 .sidebar {
@@ -53,7 +54,7 @@ h2{border-top: .5px solid #ddd; padding: .5rem 0;}
   box-sizing: border-box;
 }
 
-h2{margin: 0;}
+h2{margin: 0; padding-bottom: 0;}
 }
 
 </style>
@@ -106,6 +107,17 @@ h2{margin: 0;}
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum molestiae dignissimos sapiente enim quaerat excepturi qui quod, aut, nemo hic, voluptate at quo deleniti. Mollitia repudiandae asperiores quaerat fugiat nam animi quibusdam aliquam ab assumenda rem nesciunt consequatur in quae vero minus recusandae, itaque architecto ducimus minima iste aperiam quidem tempore quia dolor. Recusandae eaque inventore quibusdam libero perferendis nam exercitationem, praesentium ea excepturi ad voluptatum autem nisi modi veritatis quod laudantium vel, aliquid, tenetur pariatur ullam at consectetur. Odit enim assumenda, id rem cupiditate neque suscipit sunt repudiandae asperiores libero numquam magnam, ipsam unde minima omnis sed exercitationem mollitia, laborum fugiat. Facere eos quaerat fugit autem harum, animi, placeat repudiandae sequi voluptas non quod quasi fugiat unde perspiciatis laudantium cupiditate dolore veniam! Ut quos, vitae libero aliquam officiis doloribus, ab voluptatibus rem, ipsa mollitia perspiciatis illo laboriosam accusantium rerum omnis. Laudantium labore earum eos, sunt deleniti inventore. Veritatis repudiandae harum neque nemo temporibus asperiores molestias. Laudantium est sit accusamus iusto, fugit quidem, soluta cum quisquam necessitatibus possimus repellat pariatur suscipit velit, dolore assumenda deserunt similique! Corporis unde animi reprehenderit asperiores eveniet, repellendus autem ipsam eius tempora vero voluptatum minima, velit atque perspiciatis a delectus, dolorum ut inventore fugiat quis amet suscipit recusandae quasi. Id minima necessitatibus nostrum ex similique voluptatum fugit voluptatem, inventore dolor amet hic odio. Ullam, eum impedit. Dolorem facilis perspiciatis eum, sapiente repellat animi natus vitae, accusantium earum necessitatibus ipsam sequi omnis quibusdam fuga excepturi eos sit eaque ea saepe, praesentium repellendus quos laboriosam! Assumenda, nihil vero odit aliquid sint cupiditate asperiores recusandae commodi placeat minima officia quaerat, modi labore earum, nisi quia delectus ducimus magnam? Velit incidunt maiores, cumque nihil animi praesentium vel quod sunt, quibusdam pariatur at excepturi illo tempora culpa sapiente minima atque doloremque nesciunt consequatur! Quos, iste in? Nemo quisquam excepturi tempora aperiam! Quas molestiae earum eaque quae quis saepe. Nobis deleniti quidem eos. Nisi vitae iste velit recusandae nesciunt libero nihil voluptatibus? Vitae eos similique incidunt, perspiciatis provident minus, adipisci numquam in nam veritatis maiores facere fuga soluta quibusdam aut distinctio? Modi facilis temporibus cupiditate voluptates autem similique porro numquam corrupti, assumenda nihil cum deleniti tempora impedit ducimus minima pariatur reiciendis asperiores ut unde ea aspernatur aut quo explicabo maiores! Similique perferendis omnis animi doloribus nihil ea officia esse assumenda ut, aspernatur ipsam quod voluptate vitae possimus itaque numquam facere? Tenetur asperiores omnis accusantium iure, neque odit. Quas sequi eos omnis minima labore aliquam adipisci voluptates laboriosam aliquid nulla quis, laudantium sint in accusamus vitae minus alias autem velit dolores temporibus est quod aperiam. Excepturi a magni, molestiae officiis fugit eius earum voluptates? Fuga quae soluta inventore fugiat, tempora error laboriosam dicta aut sequi praesentium mollitia repellendus aperiam hic. Nostrum quos alias ea qui, beatae porro eveniet iure laboriosam fugiat commodi culpa sit minus soluta perferendis voluptate illum autem. Tempore ut optio ullam quaerat nostrum debitis dignissimos eius, iure labore, consectetur ea, odit enim minus ab provident maxime neque! Ad provident vel modi magnam laudantium officiis corporis voluptates eos asperiores! Vel?</p>
             </div>
         </div .row>
+
+        <div style="width: 100%; padding: 0 1rem; box-sizing: border-box; text-align: center;">
+          <hr style="border: .25px solid #ddd;">
+          <p>
+            &copy; Lingyu Zhou 2025
+          </p>
+          <p hidden>◐&nbsp;&nbsp;|&nbsp;&nbsp;
+            Legal&nbsp;&nbsp;|&nbsp;&nbsp;
+            Share&nbsp;&nbsp;|&nbsp;&nbsp;
+            Report</p>
+        </div>
 
 </div .wrapper>
     
