--- a/neo.html
+++ b/neo.html
@@ -4,16 +4,21 @@
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='font.css'>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <title>Document</title>
 <style>
 :root{
   --mc: white;
   --ac: black;
+  /* cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" ><text fill="white"  x="0" y="20" font-size="20">↑</text></svg>') 0 0, auto; */
 }
+
 html{
     /* font-family: '3x3'; */
+
     font-family: 'sneak';
     font-feature-settings: "calt", "dlig", "liga", "ss03";
+    
     font-size: smaller;
     background-color: var(--ac);
     color:var(--mc);
@@ -26,6 +31,13 @@ h2{border-top: .5px solid #ddd; padding: .5rem 0;}
 .wrapper {
   height: 90dvh;
   overflow-y: auto;
+  overflow: auto;
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;
+}
+
+.wrapper::-webkit-scrollbar {
+  display: none;               /* Safari and Chrome */
 }
 
 .row {
@@ -76,10 +88,16 @@ h2{margin: 0; padding-bottom: 0;}
 </head>
 <body style="margin: 0;">
 
-<nav style="width: 100%; height: 8dvh; position: fixed; top:0">
-<h1 style="padding: 1rem; margin: 0;">
+<nav style="width: 100%; height: 8dvh; position: fixed; top:0; display: flex;">
+<h1 style="margin: 0; height: min-content; margin: auto 1rem;">
   LINGYUOHZ
 </h1>
+
+<div class="material-symbols-outlined" 
+onclick="this.innerHTML=this.innerHTML==='&#xe5cd;'? '&#xe5d2;':'&#xe5cd;'"
+style="margin: auto 1rem auto auto; font-weight: 300; cursor:pointer ">&#xe5d2;</div>
+
+
 </nav>
 
 <div class="wrapper" style="margin-top: 8dvh; box-sizing: border-box;">
@@ -142,7 +160,49 @@ h2{margin: 0; padding-bottom: 0;}
               </table>
               </p>
             </div>
-        </div .row>
+      </div .row>
+
+      <div class="row">
+          <div class="column sidebar">
+            <h2>Things I believe</h2>
+        </div>
+        <div class="column content">
+          <ul style="padding: 0 1em;">
+            <li style="padding: .5rem 0;">Detail matters.</li>
+            <li style="padding: .5rem 0;">Simplicity is the ultimate sophistication.</li>
+            <li style="padding: .5rem 0;">Life is present.</li>
+            <li style="padding: .5rem 0;">Embrace mediocrity.</li>
+        </ul>
+        </div>
+      </div .row>
+
+      <div class="row">
+        <div class="column sidebar">
+          <h2>Publication</h2>
+        </div>
+        <div class="column content">
+          <ul style="padding: 0 1em;">
+            <li>
+                <span><a href="http://doi.org/10.1007/978-981-99-6441-3_96">Analysis of the Hog Futures Market in China (BPS_0799)</a></span>
+                <p>
+                    <i>Applied Economics and Policy Studies</i> (ISSN 2731-4006), <i>Advances in Economics Management and Political Sciences</i> (Print ISSN 2754-1169) <br>
+                    Chen Xu, Lingyu Zhou, Anshi Lou, Manqi Qiu & Mengyu Cao 
+                </p>
+                
+            </li>
+            <li>
+                <span>Purchasing Practices and Labor Outcomes in Global Supply Chains</span>
+                <p>
+                    <i>British Journal of Industrial Relations</i>, <span style="color: grey;">under review</span><br>
+                    Sarosh Kuruvilla, Chunyun Li, Lingyu Zhou
+                </p>
+            </li>
+        </ul>
+        </div>
+      </div .row>
+
+
+
 
         <div style="width: 100%; padding: 0 1rem; box-sizing: border-box; text-align: center;">
           <hr style="border: .25px solid #ddd;">
