--- a/pslex.html
+++ b/pslex.html
@@ -33,8 +33,12 @@ summary{font-weight: bold;}
     [home]
 </button>
 
-<button style="border: none; margin: 2px; padding: 3px; border-radius: 3px; background-color: #ccc;" onclick="location.href=location.href">
+<!-- <button style="border: none; margin: 2px; padding: 3px; border-radius: 3px; background-color: #ccc;" onclick="location.href=location.href">
     [refresh]
+</button> -->
+
+<button style="border: none; margin: 2px; padding: 3px; border-radius: 3px; background-color: #ccc;" onclick="history.back()">
+    [back]
 </button>
 
 <button style="border: none; margin: 2px; padding: 3px; border-radius: 3px; background-color: #ccc;" onclick="share()">
