--- a/fontcss.html
+++ b/fontcss.html
@@ -681,6 +681,17 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend tag='Google Sans Text' >Google Sans Text</legend>
             <div style="font-family:'Google Sans Text';" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend tag='' >ytf</legend>
+            <div style="font-family:ytf;" class="usrtxt" contenteditable ></div>
+        </fieldset>
+
+        <fieldset>
+            <legend tag='' id="var">Be Vietnam Pro</legend>
+            <div style="font-family:'Be Vietnam Pro';" class="usrtxt" contenteditable ></div>
+        </fieldset>
+
     </div>
 
 </article>
